--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -3,16 +3,14 @@
 body
  margin: 0
  padding: 0
- max-width: 1400px
- min-width: 100%
+ width: 100%
  font-family: "brandon grotesque", sans-serif
 .container
- max-width: 950px
+ width: 67.8%
  margin: 0 auto
 header
- max-height: 620px
- max-width: 1400px
  background: rgba(0, 0, 0, 0.35) url("../img/banner.png") no-repeat center
+ background-size: cover
  .container
   .wrapTop
    display: flex
@@ -67,7 +65,6 @@ header
     font-weight: 700
     margin-bottom: 125px
 #web
- max-height: 440px
  .container
   padding-top: 40px
   padding-bottom: 60px
@@ -92,7 +89,6 @@ header
    img
     width: 23%
 .identity
- max-height: 440px
  background-color: #fafafa
  .container
   padding-top: 100px
@@ -119,8 +115,6 @@ header
       font-weight: 400
       line-height: 24px
 .skills
- max-height: 585px
- height: 100%
  padding-top: 100px
  padding-bottom: 100px
  box-sizing: border-box
@@ -161,8 +155,6 @@ header
      line-height: 18px
      letter-spacing: -0.45px
 #awesome
- max-height: 810px
- height: 100%
  padding-top: 100px
  padding-bottom: 100px
  box-sizing: border-box
@@ -215,22 +207,161 @@ header
   .blockquote__second
    background: url("../img/Speak_Box-2.png") no-repeat center
 .logos
- max-height: 160px
  height: 100%
  .logos__wrap
-  max-height: 885px
-  height: 100%
   padding: 60px
   box-sizing: border-box
   display: flex
   justify-content: space-between
-.team
- max-height: 800px
- height: 100%
+  flex-wrap: wrap
+  img
+   margin: 15px
+#team
  background-color: #111111
+ padding-top: 70px
+ padding-bottom: 97px
+ box-sizing: border-box
+ .team__flex
+  display: flex
+  flex-direction: column
+  align-items: center
+  h2
+   color: #ffffff
+   font-size: 60px
+   line-height: 75px
+   font-weight: 300
+   margin-bottom: 0
+   span
+    font-weight: 700
+  .team__one
+   color: #777777
+   font-size: 22px
+   font-weight: 400
+   margin-top: 0
+  .team__wrap
+   max-width: 780px
+   width: 100%
+   display: flex
+   flex-wrap: wrap
+   justify-content: space-between
+   padding-top: 50px
+   box-sizing: border-box
+   .team__item
+    max-width: 225px
+    display: flex
+    flex-direction: column
+    align-items: center
+    .team__circle
+     width: 220px
+     height: 221px
+     border: 7px solid #ffffff
+     border-radius: 50%
+    .name
+     color: #ffffff
+     font-size: 18px
+     font-weight: 700
+     letter-spacing: -0.45px
+     margin-top: 20px
+    .profession
+     color: #ebebeb
+     font-size: 16px
+     font-weight: 400
+     letter-spacing: -0.4px
+    .social
+     display: flex
+     justify-content: center
+     .social__item
+      width: 41px
+      height: 41px
+      display: flex
+      justify-content: center
+      align-items: center
+      border: 3px solid #ffffff
+      border-radius: 50%
+      color: #ffffff
+      font-size: 20px
+      margin: 5px
+      text-decoration: none
+ .team__two
+  max-width: 590px
+  color: #ebebeb
+  font-size: 20px
+  font-weight: 400
+  letter-spacing: -0.5px
+  text-align: center
 footer
- max-height: 640px
- height: 100%
  background-color: #7690c5
+ padding-top: 70px
+ .footer__flex
+  display: flex
+  flex-direction: column
+  align-items: center
+  .footer__wrap
+   display: flex
+   align-items: center
+   justify-content: space-between
+   flex-wrap: wrap
+   .hello
+    display: flex
+    flex-direction: column
+    width: 44%
+    h2
+     color: #ffffff
+     font-size: 60px
+     line-height: 75px
+     font-weight: 300
+     margin-bottom: 0
+     span
+      font-weight: 700
+    p
+     color: #ffffff
+     font-size: 18px
+     font-weight: 400
+    .columns
+     display: flex
+     flex-wrap: wrap
+     justify-content: space-between
+     .contact
+      width: 190px
+      display: flex
+      align-items: center
+      color: #ffffff
+      i
+       width: 40px
+       font-size: 27px
+      p
+       font-size: 18px
+   form
+    width: 48%
+    display: flex
+    flex-direction: column
+    align-items: center
+    input
+     width: 350px
+     border: 1px solid #cccccc
+     background-color: #ffffff
+     padding: 20px
+     box-sizing: border-box
+     margin: 15px
+    textarea
+     width: 350px
+     padding: 20px
+     box-sizing: border-box
+     border: 1px solid #cccccc
+     margin: 15%
+  .line
+   height: 1px
+   width: 100%
+   background-color: #87a0d2
+  .copy
+   color: #ffffff
+   font-size: 16px
+   font-weight: 500
+   line-height: 22px
+   margin: 30px
+
+
+
+
 
 
